--- a/NuxtJs/assets/css/style.css
+++ b/NuxtJs/assets/css/style.css
@@ -1,11 +1,100 @@
-div{
-    color: red;
+/* all style */
+*,
+*::before,
+*::after {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    list-style: none;
+    list-style-type: none;
+    text-decoration: none;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    text-rendering: optimizeLegibility;
+    font-family: 'Plus Jakarta Sans', sans-serif;
+    color: inherit;
 }
 
-.show {
-    font-size: 40px;
+body {
+    font-family: 'Plus Jakarta Sans', sans-serif;
+    font-weight: normal;
+    line-height: 1.5;
+    color: var(--content-font-color);
+    padding-right: 0 !important;
+    background: #fff;
 }
 
-.header{
-    color: green;
+/* all style */
+
+/* Header */
+
+.desktop-header-block {
+    display: flex;
+    padding: 13px 24px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 10px;
 }
+
+.header-desktop {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex: 1 0 0;
+}
+
+.header-desktop-left-column {
+    display: flex;
+    align-items: center;
+    gap: 30px;
+}
+
+.header-desktop .logo {
+    display: flex;
+    align-items: center;
+    gap: 9px;
+}
+
+.header-desktop .logo span {
+    color: #000929;
+    text-align: center;
+    font-family: Plus Jakarta Sans;
+    font-size: 29px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    letter-spacing: -0.87px;
+}
+
+.header-desktop-left-column .header-line {
+    border-left: 1px solid #eee;
+    height: 30px;
+}
+
+.menu-item{
+    position: relative;
+}
+
+.dropdown-menu{
+    position: absolute;
+    top: 0px;
+    background: #fff;
+}
+
+/* Header */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*  */
