--- a/KaroNuxtJs/assets/css/main.css
+++ b/KaroNuxtJs/assets/css/main.css
@@ -24,6 +24,18 @@ body {
   background: #fff;
 }
 
+.font-plus-jakarta {
+  font-family: "Plus Jakarta Sans";
+}
+
+.font-white {
+  color: white;
+}
+
+.font-green {
+  color: #19AF00;
+}
+
 /* all style */
 /* Header */
 .desktop-header-block {
@@ -75,9 +87,21 @@ body {
   position: relative;
 }
 .desktop-header-block .header-desktop .header-desktop-left-column .menu-items-list .menu-item .dropdown-menu {
+  padding: 10px;
+  top: calc(100% + 8px);
+  width: calc(100% + 50px);
   position: absolute;
   top: 45px;
   background: #fff;
+  border: 1.5px solid #e6f0ff;
+  border-radius: 8px;
+  box-shadow: 0 10px 10px 0 rgba(10, 40, 85, 0.1);
+  margin: 0;
+  z-index: 2;
+}
+.desktop-header-block .header-desktop .header-desktop-left-column .menu-items-list .menu-item .dropdown-menu .dropdown-menu-item {
+  line-height: 1;
+  padding: 10px;
 }
 .desktop-header-block .header-desktop .header-desktop-left-column .menu-items-list .font-menu-items {
   color: #020B18;
@@ -175,6 +199,514 @@ body {
   font-weight: 500;
   line-height: 145%;
   /* 21.75px */
+}
+
+.intro {
+  width: 100%;
+  flex-shrink: 0;
+  background: linear-gradient(180deg, #ECF4FF -7.34%, rgba(244, 249, 254, 0.79) 89.19%);
+  padding-top: 74px;
+  padding-bottom: 74px;
+}
+.intro .intro-title {
+  display: flex;
+  width: 1340px;
+  max-width: 100%;
+  box-sizing: border-box;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 auto;
+  padding: 0 50px 60px 50px;
+}
+.intro .intro-title .intro-text-button {
+  display: flex;
+  width: 610px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 30px;
+  flex-shrink: 0;
+}
+.intro .intro-title .intro-text-button h1 {
+  color: #000929;
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 126%;
+  /* 50.4px */
+  letter-spacing: -0.4px;
+}
+.intro .intro-title .intro-text-button p {
+  color: var(--Text-Light-Grey, rgba(0, 9, 41, 0.5));
+  /* Body / Medium 150% / Medium */
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 150%;
+  /* 24px */
+}
+.intro .intro-title .intro-text-button .function-btns {
+  display: flex;
+  width: 499px;
+  align-items: center;
+}
+.intro .intro-title .intro-text-button .function-btns #ky-gui-btn {
+  background: var(--Red-Primary, #EC1F25);
+  color: var(--Main-Color-White, #FFF);
+  text-align: center;
+  font-feature-settings: "ss04" on, "ss06" on, "liga" off;
+  /* Body/Medium 150%/Bold */
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 150%;
+  /* 24px */
+}
+.intro .intro-title .intro-text-button .function-btns .default-btn {
+  width: 249.5px;
+  display: flex;
+  padding: 13px 25px;
+  box-sizing: border-box;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border-radius: 10px;
+  color: var(--Blue-2nd, #002F7A);
+  text-align: center;
+  font-feature-settings: "ss04" on, "ss06" on, "liga" off;
+  /* Body/Medium 150%/Bold */
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 150%;
+  /* 24px */
+}
+.intro .intro-title .intro-text-button .function-btns .default-btn:hover {
+  opacity: 0.8;
+}
+.intro .intro-title .intro-img {
+  width: 420.65px;
+  position: relative;
+  padding-top: 30%;
+}
+.intro .intro-title .intro-img img {
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.card-section {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  width: 1340px;
+  max-width: 100%;
+  padding: 100px 50px;
+  margin: 0 auto;
+  gap: 32px;
+}
+
+.house-type-search {
+  width: 1340px;
+  box-sizing: border-box;
+  max-width: 100%;
+  margin: 0 auto;
+  padding: 0 50px;
+}
+.house-type-search h3 {
+  color: var(--Blue-2nd, #002F7A);
+  font-size: 28px;
+  font-weight: 600;
+  line-height: 150%;
+  /* 42px */
+  letter-spacing: -0.28px;
+  padding-bottom: 24px;
+}
+.house-type-search .house-filter-search {
+  display: flex;
+  padding: 16px 20px;
+  align-items: center;
+  gap: 24px;
+  border-radius: 10px;
+  background: #FFF;
+}
+.house-type-search .house-filter-search .dropdown-select {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex: 1 0 0;
+  position: relative;
+}
+.house-type-search .house-filter-search .dropdown-select .input-select {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 6px;
+  border-radius: 5px;
+  background: var(--Color-White, #FFF);
+}
+.house-type-search .house-filter-search .dropdown-select .input-select .input-type {
+  display: flex;
+  align-items: center;
+  gap: 7px;
+}
+.house-type-search .house-filter-search .dropdown-select .input-select .input-type p {
+  color: var(--Main-Color-Black, #000929);
+  font-family: "Plus Jakarta Sans";
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 150%;
+  /* 22.5px */
+  opacity: 0.5;
+}
+.house-type-search .house-filter-search .dropdown-select .input-select .input-type span {
+  width: 20px;
+  height: 20px;
+  flex-shrink: 0;
+  background: var(--BG-Light-Blue, #F5F9FF);
+  border-radius: 50%;
+  position: relative;
+}
+.house-type-search .house-filter-search .dropdown-select .input-select .input-type span svg {
+  position: absolute;
+  top: 4px;
+  left: 4px;
+}
+.house-type-search .house-filter-search .dropdown-select .input-select strong {
+  color: var(--Main-Color-Black, #000929);
+  font-family: "Plus Jakarta Sans";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 145%;
+  /* 23.2px */
+  letter-spacing: -0.08px;
+}
+.house-type-search .house-filter-search .dropdown-select .input-select .dropdown-menu {
+  position: absolute;
+  top: 90px;
+  width: 200px;
+  display: flex;
+  flex-direction: column;
+  padding: 10px 14px;
+  gap: 10px;
+  align-self: stretch;
+  border-radius: 8px;
+  border: 1px solid var(--Blue-8th, #C8DDFF);
+  background: var(--BG-Light-Red, #FFFDFD);
+}
+.house-type-search .house-filter-search .dropdown-select .input-select .dropdown-menu input {
+  width: 100%;
+  border: none;
+  outline: none;
+}
+.house-type-search .house-filter-search .dropdown-select .input-select .dropdown-menu .dropdown-menu-item {
+  display: flex;
+  padding: 10px 14px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 8px;
+  align-self: stretch;
+}
+.house-type-search .house-filter-search .dropdown-select .input-select .search-type {
+  flex-direction: row;
+  width: 380px;
+  left: -20px;
+}
+.house-type-search .house-filter-search .dropdown-select hr {
+  width: 1px;
+  height: 35px;
+  opacity: 0.8;
+  background: var(--Border-Light-grey, #EEE);
+}
+.house-type-search .house-filter-search .filter-btns {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 10px;
+}
+.house-type-search .house-filter-search .filter-btns .filter-btn {
+  display: flex;
+  padding: 7px 25px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  align-self: stretch;
+  border-radius: 10px;
+  background: var(--Red-2nd, #FF5358);
+  color: var(--Main-Color-White, #FFF);
+  text-align: center;
+  font-feature-settings: "ss04" on, "ss06" on, "liga" off;
+  /* Body/Medium 150%/Bold */
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 150%;
+  /* 24px */
+}
+.house-type-search .house-filter-search .filter-btns .filter-btn:hover {
+  opacity: 0.8;
+}
+.house-type-search .house-filter-search .filter-btns .advanced-filter-btn {
+  display: flex;
+  padding: 16px 25px;
+  align-items: center;
+  gap: 10px;
+  border-radius: 10px;
+  border: 1px solid var(--Text-Black, #222);
+  background: var(--Color-Black, #111);
+  color: var(--Main-Color-White, #FFF);
+  text-align: center;
+  font-feature-settings: "ss04" on, "ss06" on, "liga" off;
+  /* Body/Medium 150%/Bold */
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 150%;
+  /* 24px */
+}
+.house-type-search .house-filter-search .filter-btns .advanced-filter-btn:hover {
+  opacity: 0.8;
+}
+
+.card-deal {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: white;
+  border: 1px solid #F0EFFB;
+  border-radius: 10px;
+  position: relative;
+}
+.card-deal .mask-group {
+  width: 100%;
+  padding-top: 51%;
+  border-top-right-radius: 10px;
+  position: relative;
+}
+.card-deal .mask-group .card-deal-img {
+  width: 100%;
+  height: 100%;
+  border-radius: 8px 8px 0 0;
+  -o-object-fit: cover;
+     object-fit: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.card-deal .like-btn {
+  width: 40px;
+  height: 40px;
+  background: #FFF;
+  border-radius: 25px;
+  position: absolute;
+  top: 14px;
+  right: 14px;
+  cursor: pointer;
+}
+.card-deal .like-btn svg {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+.card-deal .like-btn.click svg {
+  fill: #002051;
+}
+.card-deal .text {
+  display: flex;
+  padding: 25px 20px 20px 16px;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: auto;
+}
+.card-deal .text .text-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 16px;
+  align-self: stretch;
+}
+.card-deal .text .text-wrapper .text-area {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 12px;
+  align-self: stretch;
+}
+.card-deal .text .text-wrapper .text-area .price {
+  display: flex;
+}
+.card-deal .text .text-wrapper .text-area .price .font-red {
+  color: #EC1F25;
+  font-size: 20px;
+  font-weight: 800;
+  line-height: 150%;
+  /* 30px */
+  letter-spacing: -1px;
+}
+.card-deal .text .text-wrapper .text-area .price .font-light-grey {
+  color: var(--main-color-black, #000929);
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 28px;
+  /* 175% */
+  opacity: 0.5;
+  align-self: self-end;
+}
+.card-deal .text .text-wrapper .text-area .font-black {
+  color: #000929;
+  font-size: 17px;
+  font-weight: 700;
+  line-height: 150%;
+  /* 25.5px */
+  letter-spacing: -0.17px;
+}
+.card-deal .text .text-wrapper .text-area .font-black:hover {
+  opacity: 0.8;
+}
+.card-deal .text .text-wrapper .text-area .font-light-grey {
+  color: #000929;
+  font-size: 13px;
+  font-weight: 500;
+  line-height: 150%;
+  /* 19.5px */
+  opacity: 0.5;
+}
+.card-deal .text .text-wrapper .facilities {
+  display: flex;
+  gap: 30px;
+}
+.card-deal .text .text-wrapper .facilities .display-f {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+.card-deal .text .text-wrapper .facilities .display-f .font-grey {
+  color: #000929;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 140%;
+  /* 19.6px */
+  opacity: 0.7;
+}
+.card-deal .line {
+  width: 100%;
+  height: 1px;
+  background: #F0EFFB;
+}
+.card-deal .owner-info {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  align-self: stretch;
+  padding: 16px 20px 20px 20px;
+}
+.card-deal .owner-info .author-info {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.card-deal .owner-info .author-info img {
+  width: 45px;
+  height: 45px;
+}
+.card-deal .owner-info .author-info .font-black {
+  font-size: 14px;
+  font-weight: 500;
+}
+.card-deal .owner-info .author-info .font-grey {
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 128%;
+  /* 15.36px */
+}
+.card-deal .owner-info .btn {
+  display: flex;
+  padding: 10px 15px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 9.125px;
+  border-radius: 6px;
+  background: #FFF0F0;
+  border: none;
+}
+.card-deal .btn-wrapper {
+  display: flex;
+  align-items: center;
+  align-self: stretch;
+  padding: 16px 20px 20px 20px;
+  gap: 15px;
+}
+.card-deal .btn-wrapper .btn-func .font-blue {
+  font-size: 15px;
+  font-weight: 600;
+  line-height: 140%;
+  /* 21px */
+}
+.card-deal .btn-wrapper .btn-success {
+  border: none;
+  display: flex;
+  padding: 10px 15px;
+  justify-content: center;
+  align-items: center;
+  gap: 9.125px;
+  flex: 1 0 0;
+  border-radius: 6px;
+  background: var(--Green-Light, #F0FFE8);
+}
+.card-deal .btn-wrapper .btn-success .font-green {
+  font-size: 15px;
+  font-weight: 700;
+  line-height: 140%;
+  /* 21px */
+}
+.card-deal .sell-tag {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  left: -9px;
+  bottom: -24px;
+}
+.card-deal .sell-tag .sell-tag-wrapper {
+  width: 110px;
+  height: 32px;
+  border-radius: 8px 8px 8px 0px;
+  background: #FF5358;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  gap: 4px;
+}
+.card-deal .sell-tag .sell-tag-wrapper .font-white {
+  font-size: 12px;
+  font-weight: 700;
+  line-height: 16px;
+  /* 133.333% */
+  letter-spacing: 0.5px;
+}
+.card-deal .rent-tag {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  left: -9px;
+  bottom: -24px;
+}
+.card-deal .rent-tag .rent-tag-wrapper {
+  width: 110px;
+  height: 32px;
+  border-radius: 8px 8px 8px 0px;
+  background: #1D61CC;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  gap: 4px;
+}
+.card-deal .rent-tag .rent-tag-wrapper .font-white {
+  font-size: 12px;
+  font-weight: 700;
+  line-height: 16px;
+  /* 133.333% */
+  letter-spacing: 0.5px;
 }
 
 /* Header *//*# sourceMappingURL=main.css.map */
