--- a/KaroNuxtJs/assets/css/main.css
+++ b/KaroNuxtJs/assets/css/main.css
@@ -185,6 +185,7 @@ body {
   gap: 14px;
   border-radius: 8px;
   border: 1.5px solid var(--Border-Blue, #E6F0FF);
+  position: relative;
 }
 .desktop-header-block .header-desktop .header-desktop-right-column .user-info img {
   width: 24px;
@@ -199,6 +200,18 @@ body {
   font-weight: 500;
   line-height: 145%;
   /* 21.75px */
+}
+.desktop-header-block .header-desktop .header-desktop-right-column .user-info .user-info-dropdown {
+  position: absolute;
+  top: 50px;
+  left: 0;
+  width: 100%;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 0px 0px 4px -2px rgba(0, 0, 0, 0.5);
+  padding: 10px;
+  display: flex;
+  justify-content: center;
 }
 
 .intro {
@@ -303,6 +316,60 @@ body {
   gap: 32px;
 }
 
+.login-section {
+  display: flex;
+  width: 100%;
+  height: 100vh;
+}
+.login-section .thumb-img {
+  position: relative;
+  width: 50%;
+}
+.login-section .thumb-img img {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  -o-object-fit: cover;
+     object-fit: cover;
+  top: 0;
+  left: 0;
+}
+.login-section .login-form {
+  width: 50%;
+  height: 100%;
+}
+.login-section .login-form form {
+  padding-top: 100px;
+  display: flex;
+  width: 450px;
+  flex-direction: column;
+  align-items: center;
+  gap: 30px;
+  margin: 0 auto;
+}
+.login-section .login-form form h1 {
+  font-size: 24px;
+  font-weight: 700;
+}
+.login-section .login-form form .input-account-section {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 20px;
+  align-self: stretch;
+}
+.login-section .login-form form .input-account-section .input-account {
+  width: 100%;
+  display: flex;
+  height: 47px;
+  padding: 14px 18px;
+  align-items: center;
+  gap: 10px;
+  align-self: stretch;
+  border-radius: 6px;
+  border: 1px solid var(--Grey-9th, #D1D1D1);
+}
+
 .house-type-search {
   width: 1340px;
   box-sizing: border-box;
@@ -393,6 +460,7 @@ body {
   border-radius: 8px;
   border: 1px solid var(--Blue-8th, #C8DDFF);
   background: var(--BG-Light-Red, #FFFDFD);
+  z-index: 1;
 }
 .house-type-search .house-filter-search .dropdown-select .input-select .dropdown-menu input {
   width: 100%;
