--- a/KaroNuxtJs/assets/scss/_header.scss
+++ b/KaroNuxtJs/assets/scss/_header.scss
@@ -62,7 +62,7 @@
             margin: 0;
             z-index: 2;
 
-            .dropdown-menu-item{
+            .dropdown-menu-item {
               line-height: 1;
               padding: 10px;
             }
@@ -158,6 +158,7 @@
         gap: 14px;
         border-radius: 8px;
         border: 1.5px solid var(--Border-Blue, #E6F0FF);
+        position: relative;
 
         img {
           width: 24px;
@@ -173,6 +174,19 @@
           font-weight: 500;
           line-height: 145%;
           /* 21.75px */
+        }
+
+        .user-info-dropdown {
+          position: absolute;
+          top: 50px;
+          left: 0;
+          width: 100%;
+          background-color: white;
+          border-radius: 10px;
+          box-shadow: 0px 0px 4px -2px rgba(0, 0, 0, 0.5);
+          padding: 10px;
+          display: flex;
+          justify-content: center;
         }
       }
     }
